--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -39,6 +39,7 @@
 
 {{define "editGalleryForm"}}
 <form action="/galleries/{{.ID}}/update" method="POST" class="form-horizontal">
+  {{ csrfField }}
   <div class="form-group">
     <label for="title" class="col-md-1 control-label">Title</label>
     <div class="col-md-10">
@@ -60,6 +61,7 @@
 
 {{define "deleteGalleryForm"}}
 <form action="/galleries/{{.ID}}/delete" method="POST" class="form-horizontal">
+  {{ csrfField }}
   <div class="form-group">
     <div class="col-md-10 col-md-offset-1">
       <button type="submit" class="btn btn-danger">Delete</button>
@@ -75,6 +77,7 @@
   enctype="multipart/form-data"
   class="form-horizontal"
 >
+  {{ csrfField }}
   <div class="form-group">
     <label for="images" class="col-md-1 control-label">Add Images</label>
     <div class="col-md-10">
@@ -105,8 +108,7 @@
   action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete"
   method="POST"
 >
-  <button type="submit" class="btn btn-default btn-delete">
-    Delete
-  </button>
+  {{ csrfField }}
+  <button type="submit" class="btn btn-default btn-delete">Delete</button>
 </form>
 {{ end }}
